aap-product-docs-plaintext/red_hat_content/documentation/red_hat_ansible_automation_platform/2.5/access_management_and_authentication/proc-settings-gw-other-options.md
# 7. Configuring Ansible Automation Platform
## 7.2. Platform gateway
### 7.2.5. Configuring additional platform options




From the **Platform gateway settings** page, you can configure additional platform options.

**Procedure**

1. From the navigation panel, selectSettings→Platform gateway.
1. The **Platform gateway settings** page is displayed.
1. ClickEdit platform gateway settings.
1. You can configure the following **Other settings** :


-  **Jwt expiration buffer in seconds** : The number of seconds before a JWT token’s expiration to revoke from the cache.

When authentication happens a JWT token is created for the user and that token is cached. When subsequent calls happen to services such as automation controller or Event-Driven Ansible, the token is taken from the cache and sent to the service. Both the token and the cache of the token have an expiration time. If the token expires while in the cache the authentication process attempts results in a 401 error (unauthorized). This setting gives Red Hat Ansible Automation Platform a buffer by removing the JWT token from the cache before the token expires. When a token is revoked from cache a new token with a new expiration is generated and cached for the user. As a result, expired tokens from the cache are never used. This setting defaults to 2 seconds. If you have a large latency between platform gateway and your services and observe 401 responses you must increase this setting to lower the number of 401 responses.


-  **Status endpoint backend timeout seconds** : Timeout (in seconds) for the status endpoint to wait when trying to connect to a backend.
-  **Status endpoint backend verify** : Specifies whether SSL certificates of the services are verified when calling individual nodes for statuses.
-  **Request timeout** : Specifies, in seconds, the length of time before the proxy will report a timeout and generate a 504.
- *Allow external users to create OAuth2 tokens *: For security reasons, users from external authentication providers, such as LDAP, SAML, SSO, Radius, and others, are not allowed to create OAuth2 tokens. To change this behavior, enable this setting. Existing tokens are not deleted when this setting is turned off.

1. ClickSave platform gateway settingsto save the changes or proceed to configure the other platform options available.


